--- a/src/app.postcss
+++ b/src/app.postcss
@@ -21,6 +21,36 @@ body {
 			U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+@font-face {
+	font-family: 'lilitaone';
+	src: url('https://fonts.googleapis.com/css2?family=Heebo&family=Lilita+One&display=swap');
+	font-display: swap;
+}
+
+@font-face {
+	font-family: 'notoSans';
+	src: url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;400&family=Lilita+One&family=Noto+Sans+Soyombo&display=swap');
+	font-display: swap;
+}
+
+@font-face {
+	font-family: 'bebasNeu';
+	src: url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+	font-display: swap;
+}
+
 .font_gelaso {
 	font-family: Gelasio;
+}
+
+.font_lilita_one {
+	font-family: lilitaone;
+}
+
+.font_noto_sans{
+	font-family: notoSans;
+}
+
+.font_bebas_neu{
+	font-family: bebasNeu;
 }
